<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">SimpleCloud</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_cut">Cut</string>
    <string name="action_copy">Copy</string>
    <string name="action_clear_clipboard">Clear clipboard</string>
    <string name="action_properties">Properties</string>
    <string name="action_paste">Paste here</string>
    <string name="action_download">Download</string>
    <string name="action_upload">Upload</string>
    <string name="action_new_folder">New folder</string>
    <string name="action_new_file">New file</string>
    <string name="action_bookmark">Add bookmark</string>
	<string name="action_share">Share</string>    
	<string name="action_zip">Create Zip</string>    	
	<string name="action_select_all">Select all</string>  	
    <string name="action_set_download_dir">Set as download folder</string>

    <string name="about">About</string>
    <string name="send_feedback">Send feedback</string>
    <string name="add_account">Add account</string>
    <string name="edit_account">Edit account</string>
    <string name="delete_account">Remove account</string>

    <string name="yes">Yes</string>
    <string name="actions">Actions</string>
    <string name="no">No</string>
    <string name="not_now">Not Now</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="abort">Aborted</string>
	<string name="cancel">Cancel</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string name="finish">Finish</string>
	<string name="close">Close</string>

    <string name="access_denied">Access Denied</string>
    <string name="clear_cache">Clear cache</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_progress_title">Destination :</string>
    
    
    <string name="no_internet_connection">No internet connection</string>
</resources>
