<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/drawer_layout"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@id/left_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff3f3f3"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:clickable="true"
            android:visibility="gone" >

            <TextView
                android:id="@id/drawer_progress_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/drawer_progress_title"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
                        
            <TextView
                android:id="@id/drawer_progress_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/drawer_progress_title"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textSize="14sp"
                android:textStyle="italic" />

            <ProgressBar
                android:id="@id/drawer_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/drawer_progress_destination"
                android:clickable="false"
                android:paddingRight="5dp"
                android:progress="0" />

            <TextView
                android:id="@id/drawer_progress_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/drawer_progressbar"
                android:paddingRight="5dp"
                android:textSize="14sp"
                android:textStyle="italic" />
            
            <LinearLayout
                android:id="@id/drawer_progress_separators"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/drawer_progress_message"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#DADADC" >
                </View>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#DADADC" >
                </View>
                
            </LinearLayout>
            
			<LinearLayout
                android:id="@+id/drawer_progress_buttons"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/drawer_progress_separators"
                android:orientation="horizontal" >
                
	            <Button
	                android:id="@+id/drawer_progress_button_left"
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:textStyle="bold|italic"
	                android:layout_weight="1"
	                android:text="@string/show"
	                style="?android:attr/borderlessButtonStyle" />
	            
	            <View
	                android:layout_width="1dp"
	                android:layout_height="match_parent"
	                android:layout_marginBottom="3dp"
	                android:background="#DADADC" >
	            </View>
            	                            
	            <Button
	                android:id="@id/drawer_progress_button_right"
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:textStyle="bold|italic"
	                android:layout_weight="1"
	                android:text="@string/cancel"
	                style="?android:attr/borderlessButtonStyle" />
	
            </LinearLayout>     
                   
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/drawer_progress_buttons"
                android:background="#DADADC" >
            </View>

        </RelativeLayout>

        <ListView
            android:id="@+id/left_drawer_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:fastScrollEnabled="false" />
            <!-- android:layout_width="300dp" -->
        
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>